--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: java
-
-script: cd BibtexApp
 install:
-  - mvn test-compile -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - cd BibtexApp && mvn test-compile -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 after_success:
-  - mvn clean test cobertura:cobertura
+  - cd BibtexApp && mvn clean test cobertura:cobertura
