--- a/BibtexApp/pom.xml
+++ b/BibtexApp/pom.xml
@@ -37,11 +37,23 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.0.0</version>
+            </plugin>
   
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.6</version>
+                <version>2.7</version>
+                <configuration>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
+                    <aggregate>true</aggregate>
+                    <outputDirectory>${project.reporting.outputDirectory}/cobertura</outputDirectory>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -52,7 +64,6 @@
                     <show>private</show>
                     <nohelp>true</nohelp>
                     <stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
-
                 </configuration>
             </plugin>
             
