--- a/BibtexApp/pom.xml
+++ b/BibtexApp/pom.xml
@@ -49,7 +49,10 @@
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.7</version>
                 <configuration>
-                    <format>xml</format>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
                     <maxmem>256m</maxmem>
                     <aggregate>true</aggregate>
                     <outputDirectory>${project.reporting.outputDirectory}/cobertura</outputDirectory>
