Excluded classes from coverage which do not need to be covered

--- a/BibtexApp/pom.xml
+++ b/BibtexApp/pom.xml
@@ -59,6 +59,9 @@
                     <instrumentation>
                         <excludes>
                             <exclude>raemae/bibtexapp/Main.class</exclude>
+                            <exclude>raemae/bibtexapp/ui/ConsoleIO*.class</exclude>
+                            <exclude>raemae/bibtexapp/ui/StubIO*.class</exclude>
+                            <exclude>raemae/bibtexapp/ui/StubUIFunctionIO*.class</exclude>
                         </excludes>
                     </instrumentation>
                 </configuration>
